ligolang/src/test/contracts/negative/error_typer_1.mligo
type toto = int

let foo : string = 42 + 127

let main (p:int) (storage : int) =
  (([] : operation list) , p + foo)
